# cmd/webserver/docs/swagger.json
@@ -29,6 +29,22 @@
                 }
             }
         },
+        "/home/": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Retrieves user based on given ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Data_resp"
+                        }
+                    }
+                }
+            }
+        },
         "/test/": {
             "post": {
                 "description": "получить строку по идентификатору",
